--- a/src/classroom.html
+++ b/src/classroom.html
@@ -108,7 +108,7 @@
             </li>
             <li class="nav-item">
               <a
-                class="nav-link active"
+                class="nav-link active text-primary"
                 aria-current="page"
                 href="classroom.html"
                 ><i class="fa fa-message d-flex justify-content-center"></i>
