--- a/src/index.html
+++ b/src/index.html
@@ -275,7 +275,10 @@
         <div class="container-fluid justify-content-center">
           <ul class="navbar-nav d-flex flex-row gap-5">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
+              <a
+                class="nav-link active text-primary"
+                aria-current="page"
+                href="index.html"
                 ><i class="fa fa-home-alt d-flex justify-content-center"></i>
                 Home</a
               >
