--- a/src/search.html
+++ b/src/search.html
@@ -297,7 +297,10 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="search.html"
+              <a
+                class="nav-link active text-primary"
+                aria-current="page"
+                href="search.html"
                 ><i class="fa fa-search d-flex justify-content-center"></i>
                 Search</a
               >
