--- a/src/schedule.html
+++ b/src/schedule.html
@@ -113,12 +113,11 @@
         </li>
       </ul>
 
-      <!-- Tab panes -->
+      <!-- Tab panes for daily, weekly and monthly tabs -->
       <div class="tab-content">
         <!-- Daily View -->
         <div id="daily" class="container tab-pane active">
           <br />
-
           <!-- Days Pill Navigation -->
           <div class="container">
             <!-- Nav pills -->
@@ -157,7 +156,10 @@
                   </div>
                   <div class="col-10">
                     <h6>Introduction to Web Development</h6>
-                    <p> <i class="fa fa-location-dot me-1"></i> Room 306 - Grangegorman</p>
+                    <p>
+                      <i class="fa fa-location-dot me-1"></i> Room 306 -
+                      Grangegorman
+                    </p>
                   </div>
                 </div>
 
@@ -167,7 +169,10 @@
                   </div>
                   <div class="col-10">
                     <h6>Introduction to Web Development</h6>
-                    <p> <i class="fa fa-location-dot me-1"></i> Room 306 - Grangegorman</p>
+                    <p>
+                      <i class="fa fa-location-dot me-1"></i> Room 306 -
+                      Grangegorman
+                    </p>
                   </div>
                 </div>
               </div>
@@ -179,7 +184,10 @@
                   </div>
                   <div class="col-10">
                     <h6>Introduction to Web Development</h6>
-                    <p> <i class="fa fa-location-dot me-1"></i> Room 306 - Grangegorman</p>
+                    <p>
+                      <i class="fa fa-location-dot me-1"></i> Room 306 -
+                      Grangegorman
+                    </p>
                   </div>
                 </div>
               </div>
@@ -191,7 +199,10 @@
                   </div>
                   <div class="col-10">
                     <h6>Introduction to Web Development</h6>
-                    <p> <i class="fa fa-location-dot me-1"></i> Room 306 - Grangegorman</p>
+                    <p>
+                      <i class="fa fa-location-dot me-1"></i> Room 306 -
+                      Grangegorman
+                    </p>
                   </div>
                 </div>
               </div>
@@ -203,7 +214,10 @@
                   </div>
                   <div class="col-10">
                     <h6>Introduction to Web Development</h6>
-                    <p> <i class="fa fa-location-dot me-1"></i> Room 306 - Grangegorman</p>
+                    <p>
+                      <i class="fa fa-location-dot me-1"></i> Room 306 -
+                      Grangegorman
+                    </p>
                   </div>
                 </div>
               </div>
@@ -215,21 +229,40 @@
                   </div>
                   <div class="col-10">
                     <h6>Introduction to Web Development</h6>
-                    <p> <i class="fa fa-location-dot me-1"></i> Room 306 - Grangegorman</p>
+                    <p>
+                      <i class="fa fa-location-dot me-1"></i> Room 306 -
+                      Grangegorman
+                    </p>
                   </div>
                 </div>
               </div>
+            </div>
           </div>
         </div>
 
         <!-- Weekly Tab -->
         <div id="weekly" class="container tab-pane fade">
           <br />
-          <h3>Weekly</h3>
-          <p>
-            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-            nisi ut aliquip ex ea commodo consequat.
-          </p>
+          <div class="container">
+            <div class="row shadow-sm mb-3">
+              <div class="col-3">
+                <h6 class="pt-2">Week 1</h6>
+              </div>
+              <div class="col-9">
+                <p>Introduction to Web Development</p>
+                <hr />
+                <p>Introduction to Web Development</p>
+              </div>
+            </div>
+            <div class="row shadow-sm mb-3">
+              <div class="col-3">
+                <h6 class="pt-2">Week 2</h6>
+              </div>
+              <div class="col-9">
+                <p>Introduction to Web Development</p>
+              </div>
+            </div>
+          </div>
         </div>
 
         <!-- Monthly Tab -->
@@ -241,7 +274,8 @@
             accusantium doloremque laudantium, totam rem aperiam.
           </p>
         </div>
-        <!-- Monthly Tab -->
+
+        <!-- Agenda List Tab -->
         <div id="agenda" class="container tab-pane fade">
           <br />
           <h3>Agenda List</h3>
