--- a/src/schedule.html
+++ b/src/schedule.html
@@ -108,9 +108,7 @@
         <li class="nav-item">
           <a class="nav-link" data-bs-toggle="tab" href="#monthly">Monthly</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" data-bs-toggle="tab" href="#agenda">Agenda</a>
-        </li>
+
       </ul>
 
       <!-- Tab panes for daily, weekly and monthly tabs -->
@@ -244,23 +242,107 @@
         <div id="weekly" class="container tab-pane fade">
           <br />
           <div class="container">
-            <div class="row shadow-sm mb-3">
+            <!-- Week 1 -->
+            <div class="row shadow-sm mb-4">
               <div class="col-3">
-                <h6 class="pt-2">Week 1</h6>
+                <h6>Week 1</h6>
               </div>
               <div class="col-9">
-                <p>Introduction to Web Development</p>
+                <h6>Social Media Applications</h6>
+                <p>
+                  TU 294 | CDM & UX <br />
+                  Monday | 9:00 - 11:00 <br />
+                  Room 306 | Grangegorman
+                </p>
                 <hr />
-                <p>Introduction to Web Development</p>
+                <h6>Authoring Principles</h6>
+                <p>
+                  TU 295 | CDM & UX <br />
+                  Thursday | 12:00 - 15:00 <br />
+                  Room 301a | Bolton Street
+                </p>
               </div>
             </div>
-            <div class="row shadow-sm mb-3">
+            <div class="row shadow-sm mb-4">
               <div class="col-3">
-                <h6 class="pt-2">Week 2</h6>
+                <h6>Week 2</h6>
               </div>
               <div class="col-9">
-                <p>Introduction to Web Development</p>
+                <h6>Social Media Applications</h6>
+                <p>
+                  TU 294 | CDM & UX <br />
+                  Monday | 9:00 - 11:00 <br />
+                  Room 306 | Grangegorman
+                </p>
+                <hr />
+                <h6>Authoring Principles</h6>
+                <p>
+                  TU 295 | CDM & UX <br />
+                  Thursday | 12:00 - 15:00 <br />
+                  Room 301a | Bolton Street
+                </p>
               </div>
+            </div>
+            <div class="row shadow-sm mb-4">
+              <div class="col-3">
+                <h6>Week 3</h6>
+              </div>
+              <div class="col-9">
+                <h6>Social Media Applications</h6>
+                <p>
+                  TU 294 | CDM & UX <br />
+                  Monday | 9:00 - 11:00 <br />
+                  Room 306 | Grangegorman
+                </p>
+                <hr />
+                <h6>Authoring Principles</h6>
+                <p>
+                  TU 295 | CDM & UX <br />
+                  Thursday | 12:00 - 15:00 <br />
+                  Room 301a | Bolton Street
+                </p>
+              </div>
+            </div>
+            <div class="row shadow-sm mb-4">
+              <div class="col-3">
+                <h6>Week 4</h6>
+              </div>
+              <div class="col-9">
+                <h6>Social Media Applications</h6>
+                <p>
+                  TU 294 | CDM & UX <br />
+                  Monday | 9:00 - 11:00 <br />
+                  Room 306 | Grangegorman
+                </p>
+                <hr />
+                <h6>Authoring Principles</h6>
+                <p>
+                  TU 295 | CDM & UX <br />
+                  Thursday | 12:00 - 15:00 <br />
+                  Room 301a | Bolton Street
+                </p>
+              </div>
+            </div>
+            <div class="row shadow-sm mb-4">
+              <div class="col-3">
+                <h6>Week 5</h6>
+              </div>
+              <div class="col-9">
+                <h6>Social Media Applications</h6>
+                <p>
+                  TU 294 | CDM & UX <br />
+                  Monday | 9:00 - 11:00 <br />
+                  Room 306 | Grangegorman
+                </p>
+                <hr />
+                <h6>Authoring Principles</h6>
+                <p>
+                  TU 295 | CDM & UX <br />
+                  Thursday | 12:00 - 15:00 <br />
+                  Room 301a | Bolton Street
+                </p>
+              </div>
+            </div>
             </div>
           </div>
         </div>
@@ -275,15 +357,7 @@
           </p>
         </div>
 
-        <!-- Agenda List Tab -->
-        <div id="agenda" class="container tab-pane fade">
-          <br />
-          <h3>Agenda List</h3>
-          <p>
-            Sed ut perspiciatis unde omnis iste natus error sit voluptatem
-            accusantium doloremque laudantium, totam rem aperiam.
-          </p>
-        </div>
+
       </div>
     </main>
 
