--- a/src/index.html
+++ b/src/index.html
@@ -272,8 +272,8 @@
     <!-- bottom navigation -->
     <footer>
       <nav class="navbar fixed-bottom bg-dark-subtle">
-        <div class="container-fluid justify-content-center">
-          <ul class="navbar-nav d-flex flex-row gap-5">
+        <div class="container-fluid justify-content-evenly">
+          <ul class="navbar-nav d-flex flex-row gap-4">
             <li class="nav-item">
               <a
                 class="nav-link active text-primary"
